# Q2Remaster-Horde-Mod

./: .clangd  .gitattributes  .gitignore  BUILD_MSVC.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.linux  CMakeLists_msvc.txt  NETWORK_OVERFLOW_FIXES.md  README.md  bg_local.h  build.py  build_clang.py  build_mingw.py  build_mingw.sh  build_msvc.py  build_universal.py  buildmac.txt  cg_local.h  cg_main.cpp  cg_screen.cpp  check_damage_fallbacks.py  clang-msvc-x86_64.cmake  clang-w64-x86_64.cmake  debug.py  fire.py  fire_results.txt  g_ai.cpp  g_ai.cpp.backup  g_bombspell.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_config.cpp  g_config.h  g_func.cpp  g_items.cpp  g_laser.cpp  g_laser.h  g_local.h  (+104 more)
.claude/: settings.local.json
.serena/memories/: code_style_conventions.md  codebase_structure.md  tech_stack.md  windows_development_environment.md
bots/: bot_debug.cpp  bot_exports.cpp  bot_utils.cpp
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build_codex_scan/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Q2HordeMod.sln  Q2HordeModDLL.vcxproj  Q2HordeModDLL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_verify/: game_x64.exp  game_x64.lib
build_verify_lua_vs/: ALL_BUILD.vcxproj  Q2HordeMod.sln  Q2HordeModDLL.vcxproj  Q2HordeModDLL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
config/: monsters.json
ctf/: g_ctf.cpp  g_ctf.h  p_ctf_menu.cpp  p_ctf_menu.h
deploy/: horde.cfg  horde_config.json
deploy/bots/: characters.txt  chats.txt  dangers.txt  game_rules.txt  interactables.txt  items.txt  monsters.txt  settings_Consoles.txt  settings_Nintendo.txt  settings_PC.txt  weapons.txt
deploy/bots/navigation/: city2.nav  fact1.nav  jail3.nav  q2dm1.nav  rdm10.nav  rdm9.nav  waste2.nav  xcompnd2.nav  xdm6.nav  xhangar2.nav  xship.nav
deploy/bots/navigation/e3/: jail_e3.nav
deploy/bots/navigation/q64/: cargo.nav  conduits.nav
deploy/bots/navigation/test/: test_kaiser.nav
deploy/config/: maps_config.json  maps_config.lua  monsters.json  monsters.lua  player_config.json  player_horde_config.json  player_horde_config.lua  player_pvm_config.json  player_pvm_config.lua  pvm_stats.json  scaling.json  weapon_and_bonus.json
deploy/ents/: dm4.ent  jail_e3.ent  kmdm3.ent  lab_e3.ent  mgu1trial.ent  mgu4trial.ent  q2dm1.ent  q2dm8.ent  rdm12.ent  rdm3.ent  rdm5.ent  rdm8.ent  rdm9.ent  test_kaiser.ent  waste2.ent  xdm1.ent  xdm3.ent  xdm4.ent  xintell.ent
docs/: dps_audit.md
enc_temp_folder/2a3af2271af85a2bfa7b9a23f3aa37/: g_horde.cpp
enc_temp_folder/2b53fde3ed4a4f626f202a521ba342b4/: g_ai.cpp
enc_temp_folder/2e24b43325a0f864fe7b59e7297ca4e4/: g_rogue_newdm.cpp
enc_temp_folder/43aab34e962c144edac6f93067e171ed/: m_hover2.cpp
enc_temp_folder/53e9bd433c13b551ffe65a457d314ff/: g_ai.cpp
enc_temp_folder/5dd11aabb2ead5a955d8b4c528b39311/: g_monster.cpp
enc_temp_folder/638e412596c3d73d96886b3ce6296cc/: g_local.h
enc_temp_folder/697ad72f0f434c54c724ec3a388330/: m_shambler.cpp
enc_temp_folder/742edb3513bac41875217bbefac2f278/: g_rogue_sphere.cpp
enc_temp_folder/7a861f10685891154bfc7ec88ac277f6/: g_horde.cpp
enc_temp_folder/7ba5f0fb26b055dc596177613244b79/: g_local.h
enc_temp_folder/7d7e79fab6952082112e3489bc149f7/: g_ai.cpp
enc_temp_folder/8d1686e588e13d67bd2984b57e25fc/: m_tank_vanilla.cpp
enc_temp_folder/90cefebb3ee613fc177c2deb8924abb/: g_ctf.cpp
enc_temp_folder/9711809acaed6b350e78e4f4ed4f78/: g_horde.cpp
enc_temp_folder/97d7d249b99f4c21e74d0502c5bab99/: g_spawn.cpp
enc_temp_folder/995bfcd6b8914a49f7cc40b115efb3a/: g_horde.cpp
enc_temp_folder/a7e0beb85f6fb4a84ac28bdabcee237/: g_rogue_newtarg.cpp
enc_temp_folder/b9e67f20841ebe8e4e7e7f829fe6a0c0/: g_spawn.cpp
enc_temp_folder/c53aa272bf2b45ec28b018d9e47ef954/: g_spawn.cpp
enc_temp_folder/d08962e2c3f6b1f56d56b44482f169/: g_horde.cpp
enc_temp_folder/faa8a4fc64a7cab881577cb5d652b7/: m_runnertank.cpp
horde/: g_asset_manager.cpp  g_asset_manager.h  g_barrel.cpp  g_bombspell.cpp  g_character.cpp  g_character.h  g_doppleganger.cpp  g_entity_properties.cpp  g_entity_properties.h  g_fire.cpp  g_horde.cpp  g_horde.h  g_horde_assets.cpp  g_horde_benefits.cpp  g_horde_benefits.h  g_horde_phys.cpp  g_horde_phys.h  g_horde_scaling.cpp  g_horde_scaling.h  g_idview.cpp  g_laser.cpp  g_laser.h  g_pvm.cpp  g_pvm.h  g_pvm_menu.cpp  g_pvm_menu.h  g_strogg_summoner.cpp  g_teleport.cpp  g_tesla.cpp  g_traps.cpp  g_upgrades.cpp  g_upgrades.h  horde_boss.cpp  horde_boss.h  horde_constants.h  horde_ids.cpp  horde_ids.h  horde_menu.cpp  horde_monster_data.cpp  horde_monster_data.h  (+14 more)
horde/.claude/: settings.local.json
json/: allocator.h
rogue/: g_rogue_combat.cpp  g_rogue_func.cpp  g_rogue_items.cpp  g_rogue_misc.cpp  g_rogue_monster.cpp  g_rogue_newai.cpp  g_rogue_newdm.cpp  g_rogue_newfnc.cpp  g_rogue_newtarg.cpp  g_rogue_newtrig.cpp  g_rogue_newweap.cpp  g_rogue_phys.cpp  g_rogue_spawn.cpp  g_rogue_sphere.cpp  g_rogue_utils.cpp  m_rogue_carrier.cpp  m_rogue_carrier.h  m_rogue_stalker.cpp  m_rogue_turret.cpp  m_rogue_widow.cpp  m_rogue_widow2.cpp  m_sentrygun.cpp  p_rogue_weapon.cpp  rogue_dm_ball.cpp  rogue_dm_tag.cpp
test/: brain_opus.txt
xatrix/: g_xatrix_func.cpp  g_xatrix_items.cpp  g_xatrix_misc.cpp  g_xatrix_monster.cpp  g_xatrix_target.cpp  g_xatrix_weapon.cpp  m_xatrix_fixbot.cpp  m_xatrix_gekk.cpp  p_xatrix_weapon.cpp
